prevent horizontal scrolling

--- a/app/assets/stylesheets/hera/base.scss
+++ b/app/assets/stylesheets/hera/base.scss
@@ -17,6 +17,7 @@ body {
   display: grid;
   font-family: 'ProximaNovaLight', 'system-ui';
   text-wrap: pretty;
+  overflow-x: clip;
 }
 
 a {
